--- a/MobileApp/app/src/main/AndroidManifest.xml
+++ b/MobileApp/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".Meniu">
-            
+
         </activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
