--- a/MobileApp/app/src/main/AndroidManifest.xml
+++ b/MobileApp/app/src/main/AndroidManifest.xml
@@ -9,12 +9,15 @@
         android:roundIcon="@mipmap/logo2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".Meniu">
+        <activity android:name=".Login"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
 
         </activity>
 
-        <activity android:name=".MainActivity"
+        <activity android:name=".Meniu"></activity>
+
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
