--- a/MobileApp/app/src/main/AndroidManifest.xml
+++ b/MobileApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo2"
-        android:label="HealthLy"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/logo2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
