--- a/MobileApp/app/build.gradle
+++ b/MobileApp/app/build.gradle
@@ -21,6 +21,11 @@ android {
         }
     }
 
+    repositories {
+        google()
+        jcenter()
+    }
+
 }
 
 dependencies {
@@ -30,8 +35,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01"
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
