--- a/MobileApp/app/build.gradle
+++ b/MobileApp/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(':jtds-1.3.1')
+    //implementation 'com.jjoe64:graphview:4.2.2'
 }
